samples/_failures_safe/1761174662_15e258_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_06a506c3.c:140: error: expected ‘;’, ‘,’ or ‘)’ at end of input
